Prepare network/URL/URI logic for Java 17 to 21 upgrade.
- Updated APICommunicator to use try-with-resources block when handling
HTTP requests and responses.
- Updated MediaURL to use new URL construction method after URL
constructors were deprecated.
- Updated PiPMediaAttributor to handle newly introduced exception
related to MediaURL changes.
- Updated PiPWindow's media/album artwork logic to use URI construction
directly after URL constructors were deprecated.